--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,4 @@
+import groovy.json.JsonSlurper
 // android/build.gradle
 
 def safeExtGet(prop, fallback) {
@@ -36,7 +37,7 @@ android {
     defaultConfig {
         minSdkVersion safeExtGet('minSdkVersion', DEFAULT_MIN_SDK_VERSION)
         targetSdkVersion safeExtGet('targetSdkVersion', DEFAULT_TARGET_SDK_VERSION)
-        versionCode 2
+        versionCode 3
         versionName "1.0.1"
     }
     lintOptions {
@@ -68,7 +69,7 @@ dependencies {
 }
 
 def configureReactNativePom(def pom) {
-    def packageJson = new groovy.json.JsonSlurper().parseText(file('../package.json').text)
+    def packageJson = new JsonSlurper().parseText(file('../package.json').text)
 
     pom.project {
         name packageJson.title
