--- a/android/build.gradle
+++ b/android/build.gradle
@@ -20,7 +20,6 @@ buildscript {
 }
 
 apply plugin: 'com.android.library'
-apply plugin: 'maven-publish'
 
 // Matches values in recent template from React Native 0.59 / 0.60
 // https://github.com/facebook/react-native/blob/0.59-stable/template/android/build.gradle#L5-L9
@@ -128,6 +127,8 @@ afterEvaluate { project ->
         archives androidJavadocJar
     }
 
+    /**
+     * 不要のためコメントアウト
     task installArchives(type: Upload) {
         configuration = configurations.archives
         repositories.mavenDeployer {
@@ -136,4 +137,5 @@ afterEvaluate { project ->
             configureReactNativePom pom
         }
     }
+    */
 }
