--- a/example/package.json
+++ b/example/package.json
@@ -1,29 +1,27 @@
 {
-  "name": "example",
+  "name": "UnityViewExample",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
-    "test": "jest",
-    "postinstall": "node ../scripts/examples_postinstall.js"
+    "pods": "pod-install --quiet"
   },
   "dependencies": {
-    "react": "16.8.1",
-    "react-native": "0.61.3",
-    "@asmadsen/react-native-unity-view": "file:../"
+    "react": "18.2.0",
+    "react-native": "0.72.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.0",
-    "@babel/runtime": "^7.5.0",
-    "@react-native-community/eslint-config": "^0.0.3",
-    "babel-jest": "^24.1.0",
-    "jest": "^24.1.0",
-    "metro-react-native-babel-preset": "^0.51.1",
-    "react-test-renderer": "16.8.1"
+    "@babel/core": "^7.20.0",
+    "@babel/preset-env": "^7.20.0",
+    "@babel/runtime": "^7.20.0",
+    "@react-native/eslint-config": "^0.72.2",
+    "@react-native/metro-config": "^0.72.11",
+    "metro-react-native-babel-preset": "0.76.8",
+    "babel-plugin-module-resolver": "^5.0.0"
   },
-  "jest": {
-    "preset": "react-native"
+  "engines": {
+    "node": ">=16"
   }
 }
