--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "typecheck": "tsc --noEmit",
     "lint": "eslint \"**/*.{js,ts,tsx}\"",
     "example": "yarn --cwd example",
-    "build": "yarn clean:dist && tsc",
+    "build": "yarn clean:dist && tsc --project tsconfig.build.json",
     "bootstrap": "yarn example && yarn install && yarn example pods",
     "clean:dist": "rimraf dist/"
   },
