--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,6 @@
 {
   "compilerOptions": {
-    "sourceRoot": "./src",
-    "outDir": "./dist",
-    "declaration": true,
-    "sourceMap": true,
-
+    "noEmit": true,
     "baseUrl": "./",
     "paths": {
       "@asmadsen/react-native-unity-view": ["./src/index"]
