--- a/android/build.gradle
+++ b/android/build.gradle
@@ -96,8 +96,9 @@ repositories {
 // }
 
 dependencies {
-  implementation project(':UnityExport')
-  implementation ':unity-classes'
+  implementation project(':unityLibrary')
+  // Directly reference unity-classes.jar from unityLibrary
+  implementation files("${project(':unityLibrary').projectDir}/libs/unity-classes.jar")
   // For < 0.71, this will be from the local maven repo
   // For > 0.71, this will be replaced by `com.facebook.react:react-android:$version` by react gradle plugin
   //noinspection GradleDynamicVersion
